--- a/index-START.html
+++ b/index-START.html
@@ -21,7 +21,7 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500" />
 
   <script>
     const inputs = document.querySelectorAll('.controls input');
